--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -22,11 +22,16 @@
     }
   }
 }
+.form-group {position:relative;}
 
 .btn-simple {padding-top:5px; padding-bottom:3px; border-width:0; line-height:1em; border-radius:100px;}
 .btn-large {padding-top:10px; padding-bottom:8px; padding-left:20px; padding-right:20px;}
 .btn-extended {padding-left:20px; padding-right:20px;}
 .btn-wide {min-width:150px;}
+.text-warning {color:$color-brand;}
+.text-info {color:$color-info;}
+.text-success {color:$color-success;}
+.text-danger {color:$color-brand-fade;}
 .btn-warning {background:$color-brand;}
 .btn-warning-brand {background:$color-brand-fade;}
 .btn-info {background:$color-info;}
