--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -27,6 +27,7 @@
 .btn-simple {padding-top:5px; padding-bottom:3px; border-width:0; line-height:1em; border-radius:100px;}
 .btn-large {padding-top:10px; padding-bottom:8px; padding-left:20px; padding-right:20px;}
 .btn-extended {padding-left:20px; padding-right:20px;}
+.btn-narrow {min-width:75px;}
 .btn-wide {min-width:150px;}
 .text-warning {color:$color-brand;}
 .text-info {color:$color-info;}
