#57 :: Feature of the Add/Edit of User, for users: Super User

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -124,3 +124,6 @@ table.table {width:100%;
 #bulk_submit{display:inline;}
 
 table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
+
+.row.text-center.actions{margin-top: 20px;}
+.errored{color: #FF0000;}
