#61 :: Kids index view

--- a/app/views/home/dashboard_classroom.html.erb
+++ b/app/views/home/dashboard_classroom.html.erb
@@ -158,23 +158,6 @@
 
 <script>
   $(document).ready(function(){
-    var classroom_hash = <%= @classroom_hash.to_json.html_safe %>;
-    $('.dropdown.select.classroomType ul > li > a').click(function(){
-      var id = $(this).data('id');
-      var classrooms = classroom_hash[id];
-      $('.dropdown.select.classroom ul').html('');
-      if(classrooms.length)
-      {
-        $('.dropdown.select.classroom span.value').text(classrooms[0][1]);
-        $('.dropdown.select.classroom input[type="hidden"]').val(classrooms[0][0]);
-      }
-      else
-      {
-        $('.dropdown.select.classroom span.value').text('');
-      }
-      classrooms.forEach(function(el){
-        $('.dropdown.select.classroom ul').append('<li><a href="javascript:" data-id="' + el[0] + '">' + el[1] + '</a></li>');
-      });
-    });
+    initDropdownSelect(<%= @classroom_hash.to_json.html_safe %>);
   });
 </script>
