--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -18,19 +18,19 @@
       <div class="col-md-6 col-md-offset-3">
         <% if @kid.persisted? %>
           <div class="form-group">
-            <%= f.label :login_id, "Login", class: "col-sm-4 control-label text-main" %>
+            <%= f.label :access_token, "Access Token", class: "col-sm-4 control-label text-main" %>
             <div class="col-sm-8">
-              <%= f.text_field :login_id, placeholder: 'Login', class: 'form-control' %>
+              <%= f.text_field :access_token, placeholder: 'School123', class: 'form-control' %>
             </div>
           </div>
         <% end %>
         <div class="form-group">
-          <%= f.hidden_field :classroom_id, id: 'classroom_id', value: nil %>
+          <%= f.hidden_field :classroom_id, id: 'classroom_id', value: @kid.classroom.try(:id) %>
           <label class="col-sm-4 control-label text-main">Classroom</label>
           <div class="col-sm-8">
             <div class="dropdown select">
               <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                <span class="value"><%= @classrooms[0][1] %></span>
+                <span class="value"><%= @kid.classroom.try(:name) || @classrooms[0][1] %></span>
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu dropdown-menu-right">
@@ -54,12 +54,12 @@
           </div>
         </div>
         <div class="form-group">
-          <%= f.hidden_field :gender, id: 'gender', value: nil %>
+          <%= f.hidden_field :gender, id: 'gender', value: @kid.gender %>
           <label class="col-sm-4 control-label text-main">Gender</label>
           <div class="col-sm-8">
             <div class="dropdown select">
               <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                <span class="value"><%= @genders.first[0] %></span>
+                <span class="value"><%= @kid.persisted? ? @kid.humanize_gender : @genders.first[0] %></span>
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu dropdown-menu-right">
@@ -77,12 +77,12 @@
           </div>
         </div>
         <div class="form-group">
-          <%= f.hidden_field :primary_language, id: 'primary_language', value: nil %>
+          <%= f.hidden_field :primary_language, id: 'primary_language', value: @kid.primary_language %>
           <label class="col-sm-4 control-label text-main">Primary Language</label>
           <div class="col-sm-8">
             <div class="dropdown select">
               <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                <span class="value"><%= @languages.first[0] %></span>
+                <span class="value"><%= @kid.primary_language || @languages.first[0] %></span>
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu dropdown-menu-right">
