#59 - update html/css of kids#show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
 .font-xlarge {font-size:18px;}
 .font-xxlarge {font-size:22px;}
 .text-main {color:$color-main;}
-
+.text-info {color:$color-info;}
 .centered{text-align:center;}
 .righty{float:right;}
 .form-vpad {padding-top:100px; padding-bottom:80px;}
