#77 :: Removed button Back to Classroom from parents view

--- a/app/views/kids/reports.html.erb
+++ b/app/views/kids/reports.html.erb
@@ -10,7 +10,7 @@
           <i class="fa fa-print"></i>
           <span> Print Report as PDF</span>
         <% end %>
-        <%= link_to 'Back to Classroom','javascript:', class: 'btn btn-warning btn-large btn-simple' %>
+        <%= link_to 'Back to Classroom','javascript:', class: 'btn btn-warning btn-large btn-simple' unless current_user.parent? %>
       </div>
     </div>
   </div>
