#70 - update html of kids views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,3 +44,4 @@ a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
 .centered{text-align:center;}
 .righty{float:right;}
 .form-vpad {padding-top:100px; padding-bottom:80px;}
+textarea {resize:none;}
