--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,25 +1,32 @@
-<%= form_for(@game) do |f| %>
-  <% if @game.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@game.errors.count, "error") %> prohibited this game from being saved:</h2>
+<%= render 'shared/section_title', title: @game.new_record? ? 'Create New Game' : 'Editing Game' %>
 
-      <ul>
-      <% @game.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class="container kmSection">
+  <%= form_for(@game, html: {class: 'form-horizontal form-classic form-vpad'}) do |f| %>
+    <%= render 'shared/error_messages', object: @game %>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div class="form-group">
+          <%= f.label :name, "Name", class: "col-sm-4 control-label text-main" %>
+          <div class="col-sm-8">
+            <%= f.text_field :name, placeholder: 'Name', class: 'form-control' %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :description, "Description", class: "col-sm-4 control-label text-main" %>
+          <div class="col-sm-8">
+            <%= f.text_area :description, placeholder: 'description', class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row text-center actions">
+      <%= link_to 'Back', games_path, class: 'btn btn-danger btn-large btn-wide btn-simple' %>
+      <% if @game.new_record? %>
+        <%= f.submit 'Create Game', class: 'btn btn-info btn-large btn-wide btn-simple' %>
+      <% else %>
+        <%= link_to 'Show', @game, class: 'btn btn-warning btn-large btn-wide btn-simple' %>
+        <%= f.submit 'Update Game', class: 'btn btn-info btn-large btn-wide btn-simple' %>
       <% end %>
-      </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
