--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,27 +1,40 @@
-<h1>Games</h1>
+<%= render 'shared/section_title', title: 'Games' %>
+<div class="container kmSection">
+  <div class="row">
+    <div class="col-md-12">
+      <table class="table">
+        <thead>
+        <tr>
+          <th class="text-center minimal">Name</th>
+          <th class="text-center">Description</th>
+          <th></th>
+        </tr>
+        </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <tbody>
+        <% @games.each do |game| %>
+          <tr>
+            <td class="text-center minimal text-main"><%= game.name %></td>
+            <td class="text-center text-main"><%= game.description %></td>
+            <td class="actions minimal">
+              <%= link_to 'View', game, class: 'btn btn-info btn-simple btn-narrow' %>
+              <%= link_to 'Edit', edit_game_path(game), class: 'btn btn-warning btn-simple btn-narrow' %>
+              <%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-simple btn-narrow' %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-  <tbody>
-    <% @games.each do |game| %>
-      <tr>
-        <td><%= game.name %></td>
-        <td><%= game.description %></td>
-        <td><%= link_to 'Show', game %></td>
-        <td><%= link_to 'Edit', edit_game_path(game) %></td>
-        <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="row actions text-right">
+    <div class="col-md-12">
+      <%= link_to new_game_path, class: 'btn btn-warning btn-simple btn-large' do %>
+        <i class="fa fa-plus"></i>
+        <span>New Game</span>
+      <% end %>
+    </div>
+  </div>
+</div>
 
-<br>
-
-<%= link_to 'New Game', new_game_path %>
