#76 :: do not allow teacher to change kid's access token

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -143,3 +143,4 @@ table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
 .row.text-center.actions{margin-top: 20px;}
 .errored{color: #FF0000;}
 .pagination{display:block; text-align:center;}
+label.accessToken{margin-left: -12px}
