--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -20,7 +20,7 @@
           <div class="form-group">
             <%= f.label :access_token, "Access Token", class: "col-sm-4 control-label text-main" %>
             <div class="col-sm-8">
-              <%= f.text_field :access_token, placeholder: 'School123', class: 'form-control' %>
+              <%= f.label :access_token, @kid.access_token, class: "col-sm-4 control-label text-main accessToken"  %>
             </div>
           </div>
         <% end %>
