--- a/app/views/shared/_bottom_dashboard.html.erb
+++ b/app/views/shared/_bottom_dashboard.html.erb
@@ -46,7 +46,7 @@
             <div class="tab-content">
               <% cr_item[:bubble_groups].keys.each_with_index do |bg_name, index| %>
                 <div class="tab-pane <%= index == 0 ? 'active' : '' %>" id="<%= 'classroom' + cr_id.to_s + '_' + bg_name.downcase.tr(' ', '_') %>" role="tabpanel">
-                  <%= render 'bar_chart', values: cr_item[:bubble_groups][bg_name][:categories].values.map{|info| info[:passed]}, titles:  cr_item[:bubble_groups][bg_name][:categories].keys %>
+                  <%= render 'shared/bar_chart', values: cr_item[:bubble_groups][bg_name][:categories].values.map{|info| info[:passed]}, titles:  cr_item[:bubble_groups][bg_name][:categories].keys %>
                 </div>
               <% end %>
             </div>
