--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -85,7 +85,7 @@
 </div>
 
 <div id="bottomDashboard">
-  <%= render 'bottom_dashboard' %>
+  <%= render 'shared/bottom_dashboard' %>
 </div>
 
 <script>
